Can now create comments.

--- a/TheatreBlogAssessment/Views/Home/Details.cshtml
+++ b/TheatreBlogAssessment/Views/Home/Details.cshtml
@@ -55,37 +55,41 @@
 </div>
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.PostId })
-    
+    @Html.ActionLink("Comment", "CreateComment", new { id = Model.PostId })
+
     @Html.ActionLink("Back to List", "Index")
+
 </p>
-<table>
+<table class="table" title="comments">
     @foreach (var item in Model.Comments)
     {
-
-        <dt>
-            @Html.DisplayNameFor(model => model.User.UserName)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.User.UserName)
-        </dd>
-        <dt>
+    <tr>
+        <td>
+            @Html.DisplayNameFor(ModelItem => item.User.UserName)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.User.UserName)
+        </td>
+        <td>
             @Html.DisplayNameFor(modelItem => item.Content)
-        </dt>
-        <dd>
+        </td>
+        <td>
             @Html.DisplayFor(modelItem => item.Content)
-        </dd>
+        </td>
 
         <td>
-            @if(User.IsInRole("Member"))
-           {
-            @Html.ActionLink("Edit", "Edit", new { id = item.CommentId}) 
-            @Html.ActionLink("Delete", "Delete", new { id = item.CommentId })
-            }
-            @if((User.IsInRole("Staff") || User.IsInRole("Admin")) && item.IsAproved ==false)
+            @if (User.IsInRole("Member"))
             {
-            @Html.ActionLink("Approve", "Approve", new { id = item.CommentId})
+                @Html.ActionLink("Edit", "Edit", new { id = item.CommentId })
+                @Html.ActionLink("Delete", "Delete", new { id = item.CommentId })
+            }
+            @if ((User.IsInRole("Staff") || User.IsInRole("Admin")) && item.IsAproved == false)
+            {
+                @Html.ActionLink("Approve", "Approve", new { id = item.CommentId })
             }
         </td>
+    </tr>
+        <br />
     }
 
 </table>
