--- a/TheatreBlogAssessment/Views/Home/Details.cshtml
+++ b/TheatreBlogAssessment/Views/Home/Details.cshtml
@@ -54,7 +54,10 @@
     </dl>
 </div>
 <p>
+    @if (User.Identity.Name == Model.User.UserName)
+    {
     @Html.ActionLink("Edit", "Edit", new { id = Model.PostId })
+    }
     @Html.ActionLink("Comment", "CreateComment", new { id = Model.PostId })
 
     @Html.ActionLink("Back to List", "Index")
@@ -63,7 +66,7 @@
 <table class="table" title="comments">
     @foreach (var item in Model.Comments)
     {
-        if (item.IsAproved == true || (User.IsInRole("Staff") || User.IsInRole("Admin")))
+        if (item.IsAproved == true || (User.IsInRole("Staff") || User.IsInRole("Admin")) || User.Identity.Name == item.User.UserName)
         {
     <tr>
         <td>
@@ -82,7 +85,7 @@
         <td>
             @if (User.Identity.Name == item.User.UserName)
             {
-                @Html.ActionLink("Edit", "Edit", new { id = item.CommentId })
+                @Html.ActionLink("Edit ", "EditComment", new { id = item.CommentId }) 
                 @Html.ActionLink("Delete", "Delete", new { id = item.CommentId })
             }
             
