Delete comments (and IsSuspended User attribute setup + viewAllUsers page layout fixed)

--- a/TheatreBlogAssessment/Views/Home/Details.cshtml
+++ b/TheatreBlogAssessment/Views/Home/Details.cshtml
@@ -87,15 +87,11 @@
             @if (User.Identity.Name == item.User.UserName)
             {
                 @Html.ActionLink("Edit ", "EditComment", new { id = item.CommentId })
-                @Html.ActionLink("Delete", "Delete", new { id = item.CommentId })
             }
-            @if (User.IsInRole("Admin"))
+            @if (User.Identity.Name == item.User.UserName || User.IsInRole("Admin"))
             {
-                @Html.ActionLink("Delete", "Delete", new { id = item.CommentId })
+                @Html.ActionLink("Delete", "DeleteComment", new { id = item.CommentId })
             }
-        </td>
-        
-            <td>
                 
             @if ((User.IsInRole("Staff") || User.IsInRole("Admin")) && item.IsAproved == false)
             {
