--- a/TheatreBlogAssessment/Views/Admin/ViewUsers.cshtml
+++ b/TheatreBlogAssessment/Views/Admin/ViewUsers.cshtml
@@ -29,17 +29,18 @@
         <th>
             @Html.DisplayNameFor(model => model.Email)
         </th>
-        <th>
-            @Html.DisplayNameFor(model => model.EmailConfirmed)
-        </th>
+ 
 
         <th>
             @Html.DisplayNameFor(model => model.UserName)
         </th>
 
+
         <th>
-            @Html.DisplayNameFor(model => model.IsSuspended)
+            @Html.DisplayNameFor(model => model.CurrentRole)
         </th>
+
+
         <th></th>
     </tr>
 
@@ -63,20 +64,17 @@
     <td>
         @Html.DisplayFor(modelItem => item.Email)
     </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.EmailConfirmed)
-    </td>
+    
 
     <td>
         @Html.DisplayFor(modelItem => item.UserName)
     </td>
 
     <td>
-        @Html.DisplayFor(modelItem => item.IsSuspended)
+        @Html.DisplayFor(modelItem => item.CurrentRole)
     </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.Roles.ToString())
-    </td>
+
+    
     <td>
         @Html.ActionLink("Change Role", "ChangeRole", new { id = item.Id }) |
         @Html.ActionLink("Details", "Details", new { id = item.Id }) |
