--- a/TheatreBlogAssessment/Views/Shared/_Layout.cshtml
+++ b/TheatreBlogAssessment/Views/Shared/_Layout.cshtml
@@ -6,9 +6,9 @@
     <title>@ViewBag.Title - My ASP.NET Application</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
-
+    
 </head>
-<body>
+<body style='background: #FFCDD2'>
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
@@ -17,7 +17,9 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("The Local Theatre", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                <a href="/Home/Home" class="navbar-brand"> <img src="~/Content/images/logo.jpg" alt="Company logo" width="150" height="50" /> </a>
+                <a href=""
+                   @Html.ActionLink("The Local Theatre", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
